// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component should be rendered correctly should render checkbox if no schema provided and type is checkbox 1`] = `
<DocumentFragment>
  <div
    class="fieldSetItem"
  >
    <input
      checked=""
      class="input"
      name="Name"
      type="checkbox"
    />
    <span
      class="checkbox"
    />
  </div>
</DocumentFragment>
`;

exports[`Input component should be rendered correctly should render slider according to props 1`] = `
<DocumentFragment>
  <div
    class="slider"
  >
    <input
      checked=""
      name="Name"
      schema="[object Object]"
      type="checkbox"
    />
    <span />
  </div>
</DocumentFragment>
`;

exports[`Input component should be rendered correctly should render textarea if no schema provided and type is textarea 1`] = `
<DocumentFragment>
  <textarea
    name="Name"
    type="textarea"
  >
    value
  </textarea>
</DocumentFragment>
`;
